# seagridigital

agro lake/: README.md  config.py  main.py  openapi.json  pyproject.toml  run_client.bat  server.py
agro lake/models/: __init__.py  schemas.py
agro lake/services/: __init__.py  agricultural_service.py  apidog_client.py  docs_manager.py  gemini_client.py  hgbrasil_client.py  url_loader.py
agro lake/utils/: __init__.py  validators.py
dashboard/: fft-js.d.ts  next-pwa.d.ts  next.config.ts  package-lock.json  package.json  seagri.config.js  server.js
dashboard/src/app/api/analise/: route.ts
